--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -33,8 +33,14 @@
     --form-focus: #{get-color('green')}
     --form-outline: #{$form-outline}
     --form-mute: #{get-color('mute')}
+    --form-text: #{get-color('white')}
     --form-bg: #{get-color('shadow')}
     --form-required: #{get-color('teal')}
+
+.link.mute
+    --link-color-base: #{get-color('mute')}
+    --link-color-focus: #{get-color('shade')}
+    --link-color-current: #{get-color('shade')}
 
 
 hr
@@ -42,6 +48,11 @@ hr
     border-style: solid
     border-width: 2px
 
+.ml-auto
+    margin-left: auto
+
+.mt-auto
+    margin-top: auto
 
 .no-break
     white-space: nowrap
