--- a/_sass/typeography.sass
+++ b/_sass/typeography.sass
@@ -28,17 +28,9 @@ h6
 a
     line-height: 1
 
-// ul, ol
-//     line-height: 2em
 
-// .mute
-//     color: $mute
-
-// .shadow
-//     color: $fill2
-
-// p
-//     max-width: $text-width
+label
+    color: get-color('shade')
 
 
     
